backend/k8s-go-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-service
spec:
  # 三个副本
  replicas: 3
  selector:
    matchLabels:
      app: go-web
  template:
    metadata:
      labels:
        # 这个app名字一定要和matchLabels相同
        app: go-web
        # 这个是Deployment管理的Pod的模板
    spec:
      # 在主容器启动前先执行这个 initContainer，确保数据库存在
      containers:
        - name: go-web
          image: Mark/go-web:v0.0.1
          ports:
            - containerPort: 8080
      restartPolicy: Always
