backend/k8s-go-web-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-mysql
spec:
  selector:
    app: go-web-mysql
  ports:
    - protocol: TCP
      port: 3308
      targetPort: 3306
  type: LoadBalancer
