backend/k8s-go-web-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-redis
spec:
  selector:
    app: go-web-redis
  ports:
    - protocol: TCP
      #      k8s 内部访问接口
      port: 6379
      #      外部访问端口，必须在 30000-32767
      nodePort: 31379
      #      pod 暴露的端口
      targetPort: 6379
  type: NodePort
