backend/k8s-go-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web
spec:
  selector:
    app: go-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
